# calvincTools-CS

./: .gitignore  MANIFEST.in  README.md  proposed_edit_menu.py  pyproject.toml  questions.txt  requirements.txt  setup.py  test_models_refactoring.py  todo.txt
calvincTools/: CallerContext.py  MODELS_USAGE.md  REFACTORING_SUMMARY.md  RENAME_TO_app_secrets.py  RENAME_TO_secrets.py  __init__.py  _oldcode.py.txt  app.py  app_orig.py  apphooks.py  blueprints.py  cMenu.py  calvincTools.py  config.py  database.py  dbmenulist.py  decorators.py  forms.py  menucommand_constants.py  menucommand_handlers.py  mixins.py  models.py  models_backup.py  routes.txt  sysver.py  test_import.py  todo.txt
calvincTools/_auditioning_code/: CallerContext.py  calvincTools.py  dynamic ParmForm.py
calvincTools/_to be deprecated/: calvincTools_init.py  menucommand_handlers.py  models_backup.py
calvincTools/app_secrets/: __init__.py  create_calvin.py
calvincTools/cMenu/: __init__.py  commandhandlers.py  editmenu.py  forms.py  initial_menus.py  routes.py  views.py
calvincTools/docs/: Form classes.md  SQLAlcTools_doc.md  Subform_Classes.md  cSimpleRecordForm.md  cSimpleRecordForm_Base.md  cSingleRecordFormLayout.odg  calvincTools database notes.txt  database.md  dbmenulist_doc.md
calvincTools/mathexpr_parser/: __init__.py  eval.py
calvincTools/static/: calvinprocs.js
calvincTools/templates/: UnderConstruction.html  WICS_common.html  cToolsFormLayout.html  cTools_common.html  documentation for cTools_common.txt  macros.html  nullpage.html  proposed-table-CSS.css
calvincTools/templates/auth/: Uaffirm.html  change_password.html  login.html  signup.html  user_list.html
calvincTools/templates/auth/errors/: 400.html  404.html  500.html
calvincTools/templates/errors/: 403.html  404.html  422.html  500.html
calvincTools/templates/menu/: cMenu.html  display.html  edit_menu.html
calvincTools/templates/old templates to convert/: cGreetings.html  cParameters-success.html
calvincTools/templates/utils/: cGreetings.html  cParameter.html  cParameters.html  enter_SQL.html  forms.html  routes.html  show_SQL_results.html
calvincTools/usr_auth/: forms.py  models.py  routes.py  views.py
calvincTools/utils/: Excel.py  Jinja2Tools.py  SQLAlcTools.py  __init__.py  _calvinKlass.py  blueprints.py  cQModels.py  cQWidgets.py  cQdbFormWidgets.py  calvindate.py  datetools.py  fileDialogs.py  messageBoxes.py  misctools.py  print.py  routes.py  strings.py
calvincTools/views/: menu_views.py  util_views.py
code to review/: edit menu.html  edit menu.py  menu items 1-20.txt
