[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calvincTools"
version = "1.6.3"
description = "A Python package for calvincTools"
readme = "README.md"
authors = [
    {name = "Calvin C", email = "calvinc404@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    # Add your package dependencies here
    "PySide6==6.10.1",
    "PySide6_Addons==6.10.1",
    "PySide6_Essentials==6.10.1",
    "typing_extensions==4.12.2",
    "et_xmlfile==2.0.0",
    "openpyxl==3.1.5",
    "qtawesome==1.4.0",
    "shiboken6==6.10.1",
    "SQLAlchemy==2.0.36",
    "sqlparse==0.5.3",
    "python-dateutil==2.9.0.post0",
    "tzdata==2024.2"

]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/calvinc-org-10/calvincTools"
Repository = "https://github.com/calvinc-org-10/calvincTools"
"Bug Tracker" = "https://github.com/calvinc-org-10/calvincTools/issues"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=calvincTools",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["calvincTools"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/build/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
